[project]
name = "firefly-bot"
version = "0.1.0"
description = "firefly-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    {name = "Console", module_name = "nonebot.adapters.console"}
]
plugins = []
plugin_dirs = ["firefly_bot/plugins"]
builtin_plugins = ["echo"]
